# relatio

./: .gitignore  .pre-commit-config.yaml  =0.6.1  CHANGELOG.md  LICENSE  README.md  download_from_nltk.py  entities.pkl  environment-dev.yml  environment.yml  environment_dev.yml  graph_test.html  partisan_narratives.csv  plot_task_partisan.py  plot_task_sentiment.py  postBuild  pyproject.toml  pytest.ini  sentiment_narratives.csv  setup.cfg  tox.ini
.binder/: postBuild  requirements.txt  requirements_dev.txt  requirements_test.txt  start
.github/workflow/: python_test_tox.yml
.github/workflows/: python_test_tox.yml
Codes/: README.txt  agg_clustering.py  check_embeddings_quality.py  hyperparameters.py  make_unigram_sentences_for_nytimes.py  mine_narratives.py  nyt_sif_mds_tax.py  nyt_simple_dict_tax.py  nyt_srl_tax_2sents.py  nytimes_word2vec.py  srl_frequencies.py
Notebooks/: Benchmarking.ipynb  Benchmarking.md  Example.asciidoc  Example.ipynb  Example.md  large_np_arrays_on_disk.py  read_output.py  test_real_data.py
Tutorial/: clean_trump_tweets.ipynb  pipeline.py  trump_tweets.ipynb
binder/: environment.yml  postBuild  requirements.txt
code/: clustering.py  cooccurrence.py  corpus.py  ipcluster.py  semantic_role_labeling.py  utils.py  word_embedding.py
doc/: Development.md
documentation/: .datasets.txt.swp  Project_admin.md  SRL_benchmarking.md  SRL_ipyparallel.py  run_job_arrays_csv_to_SRL.md
documentation/Slides/: 2020-02-06 Big_Picture.pptx  2020-02-24 Updates.pptx
hpc_cluster/leonhard/: README.md  csv_to_SRL.py  test_SRL.py
myenv/: test_coreference.py  test_shimpei.ipynb  test_srl.py
narrativeNLP/: __init__.py  clustering.py  cooccurrence.py  datasets.py  graphs.py  named_entity_recognition.py  semantic_role_labeling.py  utils.py  validation.py  verbs.py  word_embedding.py  wrappers.py
notebooks/: large_np_arrays_on_disk.py
relatio/: __init__.py  _embeddings.py  _logging.py  clustering.py  datasets.py  dependency_parsing.py  embeddings.py  graphs.py  logging.py  named_entity_recognition.py  narrative_models.py  preprocessing.py  semantic_role_labeling.py  supported_models.py  test.py  to-do  utils.py  verbs.py  wrappers.py
scripts/: csv_to_SRL.py  ipcluster.py
tests/: conftest.py  test_coreference.py  test_embeddings.py  test_narrativemodel.py  test_phraseBERT.py  test_srl.py
tutorial/: .~lock.tweets_candidates_french_elections.csv#  clusters.txt  example.html  hdbscan_clusters.txt  kmeans_clusters.txt  minimal example.ipynb  network_of_narratives.html  split_sentences.pk  srl_res.json  tests_for_embeddings.ipynb  trump_worldview.html  tutorial.ipynb  tutorial.py  tutorial_english.ipynb  tutorial_french.ipynb  tutorial_old.ipynb
tutorial/output/: clusters.txt  entities.pkl  network_of_narratives.html  postproc_roles.json
