[build-system]
requires = ["setuptools>=54", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules"
testpaths = [
    "relatio",
    "tests"
]

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["relatio"]
