[metadata]
name = relatio
version = attr: relatio.__version__
description = A Python package to extract narrative statements from text
url = https://github.com/relatio-nlp/relatio
author = Andrei V. Plamada
author_email = plamadaa@ethz.ch
description = file: README.md
keywords = NLP, narrative
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages =
    relatio
python_requires = >=3.7
install_requires =
    pandas>=1
    nltk>=3
    spacy>=3
    gensim>=3,<4
    scikit-learn>=0.22
    allennlp-models>=2.3
    networkx>=2.5
    pyvis>=0.1.9
    tensorflow>=2
    tensorflow-hub
    matplotlib>=3
    requests>=2

[bdist_wheel]
universal = 1
