[metadata]
name = relatio
version = attr: relatio.__version__
description = A Python package to extract narrative statements from text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/relatio-nlp/relatio
author = Andrei V. Plamada
author_email = plamadaa@ethz.ch
keywords = NLP, narrative
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages =
    relatio
python_requires = >=3.7
install_requires =
    pandas>=1
    nltk>=3
    spacy>=3.3.2
    gensim>=3
    scikit-learn>=0.22
    allennlp-models>=2.3
    networkx>=2.5
    pyvis>=0.1.9
    matplotlib>=3
    requests>=2
    umap-learn>=0.5.3
    joblib>=1.1.0
    hdbscan>=0.8.28
    kneed>=0.8.2
    sentence-transformers>=2.2.2
