[metadata]
name = relatio
version = attr: relatio.__version__
description = A Python package to extract narrative statements from text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/relatio-nlp/relatio
author = Andrei V. Plamada
author_email = plamadaa@ethz.ch
keywords = NLP, narrative
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    relatio
python_requires = >=3.9
install_requires =
    pandas>=1.3
    nltk>=3.6
    spacy>=3.0
    gensim>=4.0
    scikit-learn>=1.0
    networkx>=2.6
    pyvis>=0.3.0
    matplotlib>=3.4
    requests>=2.25
    umap-learn>=0.5.3
    joblib>=1.1.0
    hdbscan>=0.8.28
    kneed>=0.8.2
    sentence-transformers>=2.2.2
    numpy>=1.21

[options.extras_require]
allennlp =
    allennlp>=2.10
    allennlp-models>=2.10
    torch>=1.7.0,<1.13.0
    numpy>=1.19.0,<2.0
    spacy>=3.0,<3.4
    ipython<8.12
